[package]
name = "axum-repro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
axum = { version = "0.7.4", default-features = false, features = [
	"http1",
	"http2",
	"tokio",
] }
tokio = { version = "1.36.0", default-features = false, features = [
	"rt-multi-thread",
	"macros",
] }
sha2 = "0.10.8"
